<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:padding="50sp">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/hi"
            android:textColor="@color/mainText"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/backup_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:backgroundTint="@color/button_green"
            android:fontFamily="@font/open_sans"
            android:text="@string/backup"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textStyle="bold"
            app:cornerRadius="12sp" />

        <Button
            android:id="@+id/log_out_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_red"
            android:fontFamily="@font/open_sans"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textStyle="bold"
            app:cornerRadius="12sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/mode_switch_text"
            android:textColor="@color/mainText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/privacy_policy_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/privacy_policy"
            android:textAllCaps="false"
            android:textColor="@color/mainText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/about_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/about"
            android:textAllCaps="false"
            android:textColor="@color/mainText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/contact_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:icon="@drawable/github"
            app:iconTint="@color/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/contact"
            android:textAllCaps="false"
            android:textColor="@color/mainText"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>