<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity"
    android:id="@+id/home_container">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/home_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/actions_container"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bottom_navbar_shape"
        android:backgroundTint="@color/mainBackground"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">


        <ImageButton
            android:id="@+id/all_thoughts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/all_thoughts"
            android:src="@drawable/thoughts_black"/>

        <ImageButton
            android:id="@+id/add_thoughts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/add_thoughts"
            android:src="@drawable/add_black"/>


        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings_black"/>

    </LinearLayout>


</RelativeLayout>