<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="12sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/mainBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/log_out_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/log_out_prompt"
                android:textAlignment="center"
                android:textColor="@color/mainText"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/log_out_confirm_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:backgroundTint="@color/button_red"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/log_out"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textStyle="bold"
                    app:cornerRadius="12sp" />

                <Button
                    android:id="@+id/cancel_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:backgroundTint="@color/button_green"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textStyle="bold"
                    app:cornerRadius="12sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>